force-app/main/default/objects/Servicio__c/Servicio__c.object-meta.xml
<CustomObject>
    <description>Representa los servicios ofrecidos por el salón.</description>
    <label>Servicio</label>
    <nameField>
        <label>Nombre del Servicio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Servicios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>