force-app/main/default/objects/Servicio__c/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica si el servicio está actualmente disponible.</description>
    <inlineHelpText>Marca esta opción si el servicio está disponible.</inlineHelpText>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>