force-app/main/default/objects/Servicio__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <description>Descripción detallada del servicio.</description>
    <inlineHelpText>Introduce una descripción del servicio.</inlineHelpText>
    <label>Descripción</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>