force-app/main/default/objects/Servicio__c/fields/Duracion_Minutos__c.field-meta.xml
<CustomField>
    <fullName>Duracion_Minutos__c</fullName>
    <description>Duración estimada del servicio en minutos.</description>
    <inlineHelpText>Introduce la duración estimada del servicio en minutos.</inlineHelpText>
    <label>Duración Minutos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>