force-app/main/default/objects/Servicio__c/fields/Precio__c.field-meta.xml
<CustomField>
    <fullName>Precio__c</fullName>
    <description>Precio del servicio.</description>
    <inlineHelpText>Introduce el precio del servicio.</inlineHelpText>
    <label>Precio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>