force-app/main/default/objects/Servicio__c/validationRules/Duracion_Mayor_Que_Cero.validationRule-meta.xml
<ValidationRule>
    <fullName>Duracion_Mayor_Que_Cero</fullName>
    <active>true</active>
    <description>Impide guardar servicios con una duración igual o inferior a 0 minutos.</description>
    <errorConditionFormula>AND (NOT (ISBLANK ( Duracion_Minutos__c )),
					 Duracion_Minutos__c &lt;= 0
					)</errorConditionFormula>
    <errorDisplayField>Duracion_Minutos__c</errorDisplayField>
    <errorMessage>La duración del servicio debe ser mayor que 0 minutos.</errorMessage>
</ValidationRule>